[package]
name = "restson"
version = "0.6.0"
authors = ["Sami Pietikäinen"]
description = "Easy-to-use REST client with automatic serialization and deserialization."
repository = "https://github.com/spietika/restson-rust"
keywords = ["rest", "client", "json", "hyper"]
categories = ["network-programming", "web-programming::http-client"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
hyper = "^0.13.2"
hyper-tls = "^0.4.1"
futures = "^0.3"
tokio = { version = "^0.2", features = ["full"] }
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "1.0"
url = "2"
log = "^0.4.6"
base64 = "0.11"
