[package]
name = "restson"
version = "0.7.0"
authors = ["Sami Pietikäinen"]
description = "Easy-to-use REST client with automatic serialization and deserialization."
repository = "https://github.com/spietika/restson-rust"
keywords = ["rest", "client", "json", "hyper"]
categories = ["network-programming", "web-programming::http-client"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
hyper = { version = "^0.13.2", default-features = false }
hyper-tls = "^0.4.1"
tokio = { version = "^0.2", features = ["time"] }
#serde = "^1.0"
#serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
simd-json = { version = "0.1", optional = true }
url = "2"
log = "^0.4.6"
base64 = "0.13"

[dev-dependencies]
serde_derive = "^1.0"
tokio = { version = "^0.2", features = ["macros"] }

[features]
default = ["blocking", "lib-simd-json"]
blocking = ["tokio/macros"]
lib-serde-json = ["serde", "serde_json"]
lib-simd-json = ["serde", "simd-json", "serde_json"]